fix some alignments and styling

--- a/src/Components/About-Page-Layout/Finance/index.module.css
+++ b/src/Components/About-Page-Layout/Finance/index.module.css
@@ -126,7 +126,8 @@ section.chartSection {
   }
 
   .financeContainer header > div h3 {
-    top: 50%;
+    top: 60%;
+    left: 5%;
   }
 
   .financeContainer header aside {
